This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

26-Nov-2004 (Lars Duening)  (3.3.620)
  - (Makefile.in, doc/man/ldmud.1) Added the automatic generation of a manpage
       from the drivers '--longhelp' output.
  - (src/bugs, src/done, src/wk) Moved the data from these directories
       into the bugtracker.

26-Nov-2004 (Lars Duening)  (3.3.618, .619)
  - (closure.c) Calls to explicitely inherited lfun closures weren't compiled
       correctly in lambda()s (Bug #0000145).

25-Nov-2004 (Lars Duening)  (3.3.617)
  - (prolang.y) When the new inline closures were disabled, the LPC compiler
       produced incomplete code for the inline closure constants, and
       the interpreter didn't interpret it correctly either.

24-Nov-2004 (Lars Duening)  (3.3.616)
  - (closure, gcollect.c, interpret.c, object.c prolang) Implemented proper
       closures explicitely referencing inherited functions.

22-Nov-2004 (Lars Duening)  (3.3.615)
  - (comm.c) Efun net_connect(): on multihomed machines the created
       socket is bound to the hostname given with the --hostname option (Bug
       #0000137).

15-Nov-2004 (Lars Duening)  (3.3.614)
  - (efuns.c) You learn a new thing every day: I never realized that
       strtol() supports "+34" and similar - efun to_int() can now
       interpret that again, too (reported by Bardioc).

13-Nov-2004 (Lars Duening)  (3.3.613)
  - (lex.c, efuns.c) Embarassing: the number parsing method assumed that the
       string at least started with a digit - this broken to_int().
       (Bug #0000141)

12-Nov-2004 (Lars Duening)  (3.3.612)
  - (pkg-alists.c) Efun insert_alist() no longer returned the insertion
       position for keys not yet in a key array (reported by Bardioc).

11-Nov-2004 (Lars Duening)  (3.3.611)
  - (efuns.c, lex) Efun to_int() now supports the '0x', '0b', and '0o'
       bases (suggested by Steve Goucher).
