@@ -35,11 +35,10 @@
 ;; TODO:: complex as it requires breaking up the lines.
 ;; TODO: Like Pike: replace() http://pike.ida.liu.se/generated/manual/ref/chapter_17.html
 ;; TODO::  See Zonk's "Wunschzettel"
-;; TODO: Prototypes with unnamed arguments (current the arg names are required).
+;; TODO: Prototypes with unnamed arguments (currently the arg names are required).
 ;; TODO: Put the manpage masters into doxygen format and use that to create the
 ;; TODO::  real manpages from it.
 ;; TODO: Like Pike: `operator()s as lfuns. http://pike.ida.liu.se/generated/manual/ref/chapter_8.html
-;; TODO: Investigate MPS (http://www.ravenbrook.com/project/mps/)
 ;; TODO: general coloured efuns
 ;; TODO: use the ITIMER_PROF to detect long executions and print a log
 ;; TODO: state dumps.
@@ -53,25 +52,19 @@
 ;; TODO: One .c-file per efun.
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
-;; TODO: Lfun-closures are not inherit-conscious, ie. #'foo::bar doesn't work
-;; TODO:: because the closure stores the index into the top program's
-;; TODO:: function table; it should store the inherit index and the index
-;; TODO:: into the inherited program's function table. This also affects
-;; TODO:: replace-program and the saving/storing of lfun closure values.
-;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 620)
-(Parent-Version lpmud 3-3 619)
+(Project-Version lpmud 3-3 621)
+(Parent-Version lpmud 3-3 620)
 (Version-Log "
-  - (Makefile.in, doc/man/ldmud.1) Added the automatic generation of a manpage
-       from the drivers '--longhelp' output.
-  - (src/bugs, src/done, src/wk) Moved the data from these directories
-       into the bugtracker.
+  - (interpret.c) When calling inherited functions in objects with virtual
+       parents, the function adjusting the offsets always returned NULL
+       instead of the pointer to the parent. This was a fallout from the
+       closure change.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Fri, 26 Nov 2004 23:38:24 -0700")
+(Checkin-Time "Sat, 27 Nov 2004 21:48:14 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -109,7 +102,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.683 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.684 644))
   (HISTORY (lpmud/f/49_HISTORY 1.384 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -200,7 +193,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.39 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.74 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.75 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.11 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.19 644))
